[gd_scene load_steps=5 format=3 uid="uid://dbpbqevvjsnip"]

[ext_resource type="Script" path="res://scripts/tower_third_eye.gd" id="1_gxvu8"]
[ext_resource type="PackedScene" uid="uid://bncbuu8w28xeu" path="res://scenes/third_eye_controller.tscn" id="3_hf38a"]
[ext_resource type="PackedScene" uid="uid://cdr8t75n5pvrb" path="res://scenes/tower_radius_zone.tscn" id="4_6m8os"]
[ext_resource type="PackedScene" uid="uid://bp3mcmd2at4vw" path="res://scenes/static_mouse_detection_body.tscn" id="5_rbt6v"]

[node name="basic_tower" type="Node3D"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)
script = ExtResource("1_gxvu8")

[node name="static_mouse_detection_body" parent="." instance=ExtResource("5_rbt6v")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 1.1, 1)

[node name="attack_area" parent="." instance=ExtResource("4_6m8os")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0.1, 1)

[node name="third_eye_controller" parent="." instance=ExtResource("3_hf38a")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 1.1, 1)
